chore: add automerge renovate rules

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "packageRules": [
+    {
+      "groupName": "Frequently updated dev deps",
+      "automerge": true,
+      "major": {
+        "automerge": false
+      },
+      "packagePatterns": ["^@babel/", "^babel-", "^eslint", "^jest"],
+      "packageNames": ["lint-staged", "prettier"]
+    }
   ]
 }
