--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   "source": "index.js",
   "keywords": [],
   "devDependencies": {
+    "@shelf/eslint-config": "0.0.8",
     "eslint": "5.12.1",
-    "eslint-config-prettier": "3.6.0",
-    "eslint-plugin-prettier": "3.0.1",
     "husky": "1.3.1",
     "jest": "23.6.0",
     "lint-staged": "8.1.0",
