--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/core": "7.7.2",
     "@babel/preset-env": "7.7.1",
     "@babel/preset-typescript": "7.7.2",
+    "@packtracker/webpack-plugin": "2.2.0",
     "@shelf/eslint-config": "0.11.0",
     "@types/jest": "24.0.23",
     "@types/node": "10",
