--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@shelf/eslint-config": "0.11.0",
     "@types/jest": "24.0.23",
     "@types/node": "10",
+    "@types/webpack": "4.41.0",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
     "eslint": "6.6.0",
