--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
     }
   },
   "lint-staged": {
-    "*.{html,json,md,yml}": [
+    "*.{html,md,yml}": [
       "prettier --write",
       "git add"
     ],
-    "*.{ts,js}": [
+    "*.{ts,js,json}": [
       "eslint --fix",
       "git add"
     ]
   },
+  "prettier": "@shelf/prettier-config",
   "jest": {
     "testEnvironment": "node"
   },
@@ -52,6 +53,7 @@
     "@babel/preset-typescript": "7.9.0",
     "@packtracker/webpack-plugin": "2.2.0",
     "@shelf/eslint-config": "0.16.0",
+    "@shelf/prettier-config": "0.0.7",
     "@types/jest": "25.2.3",
     "@types/node": "10",
     "@types/webpack": "4.41.16",
