--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,5 @@
 version: 2.1
 
-executors:
-  node12:
-    docker:
-      - image: circleci/node:12
-    working_directory: /mnt/ramdisk
-    environment:
-      - TOOL_NODE_FLAGS: '--max-old-space-size=4800'
-
 orbs:
   node: circleci/node@1.1.6
 
@@ -17,24 +9,19 @@ commands:
       - node/with-cache:
           cache-version: v1-all
           cache-key: package.json
+          dir: ~/repo/node_modules
           use-strict-cache: true
           steps:
-            - run: yarn install --pure-lockfile --ignore-scripts --no-progress
+            - run: yarn install --pure-lockfile --no-progress
 
 jobs:
   build:
-    executor: node12
+    executor:
+      name: node/default
+      tag: '12'
     steps:
       - checkout
       - install_deps
-
-      - run: yarn lint:ci
-      - run: yarn build
       - run: yarn test
-
-workflows:
-  version: 2
-
-  build_deploy:
-    jobs:
-      - build
+      - run: yarn type-check
+      - run: yarn lint:ci
