--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "module": "commonjs",
-    "target": "esnext",
-    "sourceMap": false,
-    "isolatedModules": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "isolatedModules": true,
+    "module": "commonjs",
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "target": "esnext"
   },
   "exclude": ["node_modules"],
-  "include": ["src", "webpack.config.ts"]
+  "include": ["src"]
 }
