--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
       - node/with-cache:
           cache-version: v3-all
           cache-key: package.json
-          dir: ~/repo/node_modules
+          dir: /mnt/ramdisk/node_modules
           use-strict-cache: true
           steps:
             - run: yarn install --pure-lockfile --no-progress
@@ -19,7 +19,7 @@ jobs:
     executor:
       name: node/default
       tag: '12'
-    working_directory: ~/repo
+    working_directory: /mnt/ramdisk
     steps:
       - checkout
       - install_deps
