chore: upd deps, node, circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,30 @@
+orbs:
+  node: circleci/node@5.0.2
+  aws-cli: circleci/aws-cli@3.1.1
+
 version: 2.1
 
-orbs:
-  node: circleci/node@1.1.6
+parameters:
+  node_version:
+    type: string
+    default: '16.15.0'
 
 commands:
   install_deps:
     steps:
-      - node/with-cache:
-          cache-version: v3-all
-          cache-key: package.json
-          dir: /mnt/ramdisk/node_modules
-          use-strict-cache: true
-          steps:
-            - run: yarn install --pure-lockfile --no-progress
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-version: v1-all
+          cache-only-lockfile: true
+          app-dir: ~/repo
+          override-ci-command: yarn install --pure-lockfile --no-progress
 
 jobs:
   build:
     executor:
       name: node/default
-      tag: '12'
-    working_directory: /mnt/ramdisk
+      tag: << pipeline.parameters.node_version >>
+    working_directory: ~/repo
     steps:
       - checkout
       - install_deps
