--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
   },
   "lint-staged": {
     "*.{html,md,yml}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{ts,js,json}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "prettier": "@shelf/prettier-config",
@@ -43,24 +41,24 @@
     "@babel/core": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-typescript": "7.17.12",
-    "@shelf/eslint-config": "2.16.0",
+    "@shelf/eslint-config": "2.18.0",
     "@shelf/prettier-config": "1.0.0",
     "@types/jest": "27.5.1",
     "@types/node": "10",
     "@types/webpack": "5.28.0",
-    "babel-jest": "27.5.1",
+    "babel-jest": "28.1.0",
     "babel-loader": "8.2.5",
     "eslint": "8.16.0",
     "husky": "8.0.1",
-    "jest": "27.5.1",
+    "jest": "28.1.0",
     "lint-staged": "12.4.3",
     "prettier": "2.6.2",
     "typescript": "4.7.2",
-    "webpack": "5.71.0",
+    "webpack": "5.72.1",
     "webpack-cli": "4.9.2"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "publishConfig": {
     "access": "public"
