--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "files": [
     "lib"
   ],
-  "main": "lib/index.js",
+  "sideEffects": false,
+  "type": "module",
+  "exports": "./lib/index.js",
+  "module": "./lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib/ && yarn build:types && yarn build:webpack",
-    "build:types": "tsc -p tsconfig.types.json",
-    "build:webpack": "NODE_ENV=production webpack",
+    "build": "rm -rf lib/ && tsc",
     "coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.ts,.json --fix",
     "lint:ci": "eslint . --ext .js,.ts,.json",
@@ -43,6 +44,9 @@
     "@babel/preset-typescript": "7.26.0",
     "@shelf/eslint-config": "3.15.1",
     "@shelf/prettier-config": "1.0.0",
+    "@shelf/tsconfig": "0.1.0",
+    "@swc/core": "1.4.11",
+    "@swc/jest": "0.2.36",
     "@types/jest": "29.5.14",
     "@types/node": "18",
     "@types/webpack": "5.28.5",
@@ -51,11 +55,11 @@
     "eslint": "8.57.1",
     "husky": "9.1.4",
     "jest": "29.7.0",
+    "jest-junit": "16.0.0",
     "lint-staged": "15.2.11",
     "prettier": "3.4.2",
-    "typescript": "5.7.2",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "ts-jest-resolver": "2.0.1",
+    "typescript": "5.7.2"
   },
   "engines": {
     "node": ">=18"
